Mejora de pag contacto y sucursales

--- a/Proyecto final/html/ubicacion.html
+++ b/Proyecto final/html/ubicacion.html
@@ -15,14 +15,32 @@
     <nav>
         <img id='logo' src="/img/logo-nuevo.png" alt="Logo de la empresa">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li>Motos</li>
             <li>Coches Usados</li>
             <li>0 km</li>
-            <li><a href="html/ubicacion.html">¿Dónde estamos?</a></li>
+            <li><a href="ubicacion.html">¿Dónde estamos?</a></li>
         </ul>
     </nav>
     
+    <main>
+
+        <div class="sucursal-box">
+            <h4>Sucursales</h4>
+
+            <p>Actualmente estamos ubicados en Gral. Rodríguez 42, B1704 Ramos Mejía, Provincia de Buenos Aires. Puedes venir a visitarnos de lunes a viernes de 08:00 a 17:00, nuestro personal te brindará la mejor atención y estará a tu disposición para acompañarte y guiarte a tu nuevo vehiculo.</p>
+        </div>
+
+        <div class="maps-box">
+            <iframe class="iframe-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26257.444624577507!2d-58.57323178345479!3d-34.650142244999145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc92c7e5c47f5%3A0x96ffa4903dfef1a3!2sVM%20Automotores!5e0!3m2!1ses-419!2sar!4v1731900960012!5m2!1ses-419!2sar" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <div class="mas-info-box">
+                <h4>¿Quieres más informacion?</h4>
+                <a class="boton" href="contacto.html">Contáctanos</a>
+            </div>
+        </div>
+    </main>
+
 
     <footer>
         <ul>
