--- a/Proyecto final/index.html
+++ b/Proyecto final/index.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
 
-    <section id="container_buscador">
+    <section class="container_buscador">
         <h2>Busca tu modelo</h2>
         <input type="text" class="input-soft" id="busqueda" placeholder="Buscar...">
         <input type="submit" value="Buscar">
