--- a/Proyecto final/index.html
+++ b/Proyecto final/index.html
@@ -69,7 +69,7 @@
 
     <footer>
         <ul>
-            <li>Home</li>
+            <li><a href="index.html">Home</a></li>
             <li>Acerca de</li>
             <li>Ayuda</li>
             <li><a href="/html/contacto.html">Contacto</a></li>
